# platform.external.webrtc

./: .gitignore  AUTHORS  Android.bp  BUILD.bazel  CMakeLists.txt  MODULE.bazel  OWNERS  README.md  WORKSPACE  WORKSPACE.bazel  build_defs.bzl  darwin_aarch64.cmake  darwin_x86_64.cmake  emu_file_utils_override.cc  import-webrtc.py  import_all.sh  linux_aarch64.cmake  linux_x86_64.cmake  platform_deps.bzl  windows_x86_64.cmake
android_tools/: generate_android_bp.sh  generate_bp.py  instructions.txt
api/: BUILD.bazel
api/adaptation/: BUILD.bazel
api/audio/: BUILD.bazel
api/audio/test/: BUILD.bazel
api/audio_codecs/: BUILD.bazel
api/audio_codecs/L16/: BUILD.bazel
api/audio_codecs/g711/: BUILD.bazel
api/audio_codecs/g722/: BUILD.bazel
api/audio_codecs/ilbc/: BUILD.bazel
api/audio_codecs/opus/: BUILD.bazel
api/audio_codecs/test/: BUILD.bazel
api/crypto/: BUILD.bazel
api/environment/: BUILD.bazel
api/metronome/: BUILD.bazel
api/metronome/test/: BUILD.bazel
api/neteq/: BUILD.bazel
api/numerics/: BUILD.bazel
api/rtc_event_log/: BUILD.bazel
api/task_queue/: BUILD.bazel  default_task_queue_factory_libevent.cc  default_task_queue_factory_stdlib_or_libevent_experiment.cc
api/task_queue/test/: BUILD.bazel
api/test/metrics/: BUILD.bazel
api/test/network_emulation/: BUILD.bazel
api/test/pclf/: BUILD.bazel
api/test/video/: BUILD.bazel
api/transport/: BUILD.bazel
api/transport/rtp/: BUILD.bazel
api/units/: BUILD.bazel
api/video/: BUILD.bazel  i010_buffer.cc  i210_buffer.cc  i410_buffer.cc  i420_buffer.cc  i422_buffer.cc  i444_buffer.cc  nv12_buffer.cc
api/video/test/: BUILD.bazel
api/video_codecs/: BUILD.bazel
api/video_codecs/test/: BUILD.bazel
api/voip/: BUILD.bazel
audio/: BUILD.bazel
audio/utility/: BUILD.bazel
audio/voip/: BUILD.bazel
audio/voip/test/: BUILD.bazel
call/: BUILD.bazel
call/adaptation/: BUILD.bazel
common_audio/: BUILD.bazel
common_video/: BUILD.bazel  video_frame_buffer.cc
common_video/generic_frame_descriptor/: BUILD.bazel
common_video/h264/: pps_parser.h  sps_parser.h
common_video/libyuv/: libyuv_unittest.cc  webrtc_libyuv.cc
common_video/test/: BUILD.bazel
configs/: BUILD.bazel
examples/: BUILD.bazel
examples/androidnativeapi/: BUILD.bazel
examples/androidvoip/: BUILD.bazel
examples/peerconnection/client/: main_wnd.cc
examples/peerconnection/client/linux/: main_wnd.cc
experiments/: BUILD.bazel
logging/: BUILD.bazel
media/: BUILD.bazel
modules/: BUILD.bazel
modules/async_audio_processing/: BUILD.bazel
modules/audio_coding/: BUILD.bazel
modules/audio_coding/audio_network_adaptor/: debug_dump.proto
modules/audio_device/: BUILD.bazel
modules/audio_mixer/: BUILD.bazel
modules/audio_processing/: BUILD.bazel
modules/audio_processing/aec3/: BUILD.bazel  reverb_model_estimator.cc
modules/audio_processing/aec_dump/: BUILD.bazel
modules/audio_processing/aecm/: BUILD.bazel
modules/audio_processing/agc/: BUILD.bazel
modules/audio_processing/agc2/: BUILD.bazel
modules/audio_processing/agc2/rnn_vad/: BUILD.bazel  rnn.cc  rnn_fc.cc  rnn_gru.cc  (+3 more)
modules/audio_processing/capture_levels_adjuster/: BUILD.bazel
modules/audio_processing/ns/: BUILD.bazel
modules/audio_processing/transient/: BUILD.bazel
modules/audio_processing/utility/: BUILD.bazel  pffft_wrapper.cc
modules/audio_processing/vad/: BUILD.bazel
modules/congestion_controller/: BUILD.bazel
modules/congestion_controller/goog_cc/: BUILD.bazel
modules/congestion_controller/pcc/: BUILD.bazel
modules/congestion_controller/rtp/: BUILD.bazel
modules/desktop_capture/: BUILD.bazel  desktop_frame.cc  desktop_frame_rotation.cc
modules/include/: module_common_types_public.h
modules/pacing/: BUILD.bazel
modules/remote_bitrate_estimator/: BUILD.bazel
modules/rtp_rtcp/: BUILD.bazel
modules/utility/: BUILD.bazel
modules/video_capture/: BUILD.bazel  video_capture_impl.cc
modules/video_coding/: BUILD.bazel
modules/video_coding/deprecated/: BUILD.bazel
modules/video_coding/svc/: BUILD.bazel
modules/video_coding/timing/: BUILD.bazel
net/dcsctp/: BUILD.bazel
net/dcsctp/common/: BUILD.bazel
net/dcsctp/fuzzers/: BUILD.bazel
net/dcsctp/packet/: BUILD.bazel  crc32c.cc
net/dcsctp/public/: BUILD.bazel
net/dcsctp/rx/: BUILD.bazel
net/dcsctp/socket/: BUILD.bazel
net/dcsctp/testing/: BUILD.bazel
net/dcsctp/timer/: BUILD.bazel
net/dcsctp/tx/: BUILD.bazel
p2p/: BUILD.bazel
pc/: BUILD.bazel  legacy_stats_collector.cc
pc/scenario_tests/: BUILD.bazel
resources/: .gitattributes  BUILD.bazel  download_resource.py
resources/bazel/: BUILD.bazel  download_resource.py  fetch_resource.bzl
rtc_base/: BUILD.bazel  event_tracer.cc  logging.cc  protobuf_utils.h  task_queue_libevent.cc  trace_categories.h  trace_event.h
rtc_base/containers/: BUILD.bazel
rtc_base/experiments/: BUILD.bazel
rtc_base/memory/: BUILD.bazel
rtc_base/network/: BUILD.bazel
rtc_base/strings/: json.h
rtc_base/synchronization/: BUILD.bazel
rtc_base/system/: BUILD.bazel  arch.h
rtc_base/task_utils/: BUILD.bazel
rtc_base/units/: BUILD.bazel
rtc_base/win/: BUILD.bazel
rtc_tools/: BUILD.bazel
rtc_tools/data_channel_benchmark/: BUILD.bazel
rtc_tools/frame_analyzer/: video_color_aligner.cc  video_geometry_aligner.cc
rtc_tools/network_tester/: BUILD.bazel
sdk/: BUILD.bazel
sdk/android/: BUILD.bazel
sdk/objc/unittests/: RTCCVPixelBuffer_xctest.mm  frame_buffer_helpers.mm
stats/: BUILD.bazel
system_wrappers/: BUILD.bazel
test/: BUILD.bazel  gmock.h  gtest.h  test_main_lib.cc  video_codec_tester.cc  video_codec_tester_unittest.cc
test/fuzzers/: BUILD.bazel
test/fuzzers/utils/: BUILD.bazel
test/jitter/: BUILD.bazel
test/logging/: BUILD.bazel
test/network/: BUILD.bazel
test/pc/e2e/: BUILD.bazel
test/pc/sctp/: BUILD.bazel
test/peer_scenario/: BUILD.bazel
test/peer_scenario/tests/: BUILD.bazel
test/scenario/: BUILD.bazel
test/time_controller/: BUILD.bazel
video/: BUILD.bazel
video/adaptation/: BUILD.bazel
video/config/: BUILD.bazel
video/render/: BUILD.bazel
(+20 files in other folders)
