# load("@bazel_skylib//lib:selects.bzl", "selects")

package(
    default_visibility = ["//:__subpackages__"],
)

config_setting(
    name = "linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "android_arm",
    constraint_values = [
        "@platforms//cpu:armv7",
        "@platforms//os:android",
    ],
)

config_setting(
    name = "android_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:android",
    ],
)

config_setting(
    name = "android_x86",
    constraint_values = [
        "@platforms//cpu:x86_32",
        "@platforms//os:android",
    ],
)

config_setting(
    name = "android_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:android",
    ],
)

config_setting(
    name = "darwin_x86_64",
    values = {
        "apple_platform_type": "macos",
        "cpu": "darwin_x64",
    },
)

config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "ios_x86_32",
    constraint_values = [
        "@platforms//cpu:arm64e",
        "@platforms//os:ios",
    ],
)

config_setting(
    name = "ios_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:android",
    ],
)

config_setting(
    name = "ios_arm64",
    constraint_values = [
        "@platforms//cpu:arm64e",
        "@platforms//os:ios",
    ],
)

config_setting(
    name = "ios_armv7",
    constraint_values = [
        "@platforms//cpu:armv7",
        "@platforms//os:ios",
    ],
)

config_setting(
    name = "windows_x86",
    constraint_values = [
        "@platforms//cpu:x86_32",
        "@platforms//os:windows",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)
